--- a/currency-converter-app/package.json
+++ b/currency-converter-app/package.json
@@ -9,6 +9,7 @@
     "@uphold/uphold-sdk-javascript": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.5.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
